--- a/logregressionuzo.ipynb
+++ b/logregressionuzo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -104,8 +104,8 @@
       "Dep. Variable:                isFraud   No. Observations:               590540\n",
       "Model:                          Logit   Df Residuals:                   590529\n",
       "Method:                           MLE   Df Model:                           10\n",
-      "Date:                Mon, 02 Dec 2024   Pseudo R-squ.:                 0.04632\n",
-      "Time:                        22:17:41   Log-Likelihood:                -85425.\n",
+      "Date:                Wed, 04 Dec 2024   Pseudo R-squ.:                 0.04632\n",
+      "Time:                        21:44:18   Log-Likelihood:                -85425.\n",
       "converged:                       True   LL-Null:                       -89574.\n",
       "Covariance Type:            nonrobust   LLR p-value:                     0.000\n",
       "======================================================================================================\n",
@@ -141,7 +141,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interpretations "
+    "## Interpretations \n",
+    "\n",
+    "Based on the results of this model we found that :\n",
+    "\n",
+    "> ### Key Insights for Each Predictor\n",
+    "\n",
+    "\n",
+    "The logistic regression model provides insights into the factors influencing credit card fraud. The baseline log-odds of fraud, represented by the intercept, confirm that fraudulent transactions are rare events. Significant predictors include transaction amount, with higher amounts slightly increasing the likelihood of fraud, and average daily transactions in the last month, which reduce the likelihood, suggesting frequent activity signals legitimate usage. Similarly, high transaction activity in the last hour is associated with reduced fraud risk. In contrast, factors like the number of names or products associated with a card and the number of other linked cards increase the likelihood of fraud, potentially indicating unusual account behaviors. Timing also plays a role, as transactions later in the day show a marginal decrease in fraud likelihood. However, other predictors such as the number of transactions in the last 24 hours, the number of devices associated with the card, and the day of the week are not significant contributors to fraud detection. Overall, the model identifies patterns that help distinguish legitimate behavior from potentially fraudulent activities, offering actionable insights for targeted monitoring and intervention."
    ]
   }
  ],
