classification report logregression

--- a/logregressionuzo.ipynb
+++ b/logregressionuzo.ipynb
@@ -16,12 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import statsmodels.api as sm\n",
     "import pandas as pd\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
     "# load the train_selected_features.csv\n",
     "folder_path = \"./data/\"\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,8 +105,8 @@
       "Dep. Variable:                isFraud   No. Observations:               590540\n",
       "Model:                          Logit   Df Residuals:                   590529\n",
       "Method:                           MLE   Df Model:                           10\n",
-      "Date:                Wed, 04 Dec 2024   Pseudo R-squ.:                 0.04632\n",
-      "Time:                        21:44:18   Log-Likelihood:                -85425.\n",
+      "Date:                Mon, 09 Dec 2024   Pseudo R-squ.:                 0.04632\n",
+      "Time:                        11:06:46   Log-Likelihood:                -85425.\n",
       "converged:                       True   LL-Null:                       -89574.\n",
       "Covariance Type:            nonrobust   LLR p-value:                     0.000\n",
       "======================================================================================================\n",
@@ -135,6 +136,32 @@
     "\n",
     "# View the model summary\n",
     "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      1.00      0.98    569877\n",
+      "           1       0.79      0.04      0.08     20663\n",
+      "\n",
+      "    accuracy                           0.97    590540\n",
+      "   macro avg       0.88      0.52      0.53    590540\n",
+      "weighted avg       0.96      0.97      0.95    590540\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Classification Report:\\n\", classification_report(y, model.predict(X) > 0.5))"
    ]
   },
   {
